WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116634
Fix crash when closing a page that's trying to access session storage
https://bugs.webkit.org/show_bug.cgi?id=116634
Summary
Fix crash when closing a page that's trying to access session storage
Anders Carlsson
Reported
2013-05-22 13:36:22 PDT
Fix crash when closing a page that's trying to access session storage
Attachments
Patch
(5.48 KB, patch)
2013-05-22 13:38 PDT
,
Anders Carlsson
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2013-05-22 13:38:14 PDT
Created
attachment 202618
[details]
Patch
Geoffrey Garen
Comment 2
2013-05-22 14:17:31 PDT
Comment on
attachment 202618
[details]
Patch r=me
Anders Carlsson
Comment 3
2013-05-22 14:25:26 PDT
Committed
r150543
: <
http://trac.webkit.org/changeset/150543
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug