Fix crash when closing a page that's trying to access session storage https://bugs.webkit.org/show_bug.cgi?id=116634 <rdar://problem/13904054>

Reviewed by Geoffrey Garen.

It is possible for the StorageManager to get messages from a web page that has already been closed by the UI process.
If that happens, just ignore the messages.

* UIProcess/Storage/StorageManager.cpp:
(WebKit::StorageManager::createSessionStorageMap):
(WebKit::StorageManager::getValues):
(WebKit::StorageManager::setItem):
(WebKit::StorageManager::removeItem):
(WebKit::StorageManager::clear):
(WebKit::StorageManager::destroySessionStorageNamespaceInternal):

Canonical link: https://commits.webkit.org/134936@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150543 268f45cc-cd09-0410-ab3c-d52691b4dbfc